--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,5 +39,7 @@ jobs:
         python-version: '3.11'
     - name: Run tests
       run: |
-        pip install pytest==6.2.4
+        cd backend
+        pip install -r requirements.txt
+        cd ..
         pytest
