--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
       run: python -m flake8 backend/
 
     # Тесты
-  tests:
+  backend-tests:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
@@ -37,9 +37,36 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: '3.11'
-    - name: Run tests
+
+    - name: Install system dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libjpeg-dev zlib1g-dev libfreetype6-dev \
+        liblcms2-dev libwebp-dev tcl8.6-dev tk8.6-dev python3-tk \
+        build-essential libpq-dev
+
+    - name: Create virtual environment
+      run: |
+        python -m venv venv
+        source venv/bin/activate
+
+    - name: Install pip cache
+      run: |
+        source venv/bin/activate
+        pip install --upgrade pip
+        pip cache purge
+
+    - name: Install dependencies
+      run: |
+        source venv/bin/activate
+        pip install -r backend/requirements.txt
+
+    - name: Navigate to backend directory
       run: |
         cd backend
-        pip install -r requirements.txt
-        cd ..
+        pwd
+
+    - name: Run tests
+      run: |
+        source venv/bin/activate
         pytest
