--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  flake8:
+  flake8/local_tests:
     runs-on: ubuntu-latest
 
     steps:
@@ -18,55 +18,15 @@ jobs:
       with:
         python-version: 3.9
 
-    - name: Install dependencies
+   -  name: Install dependencies
       run: |
-        python -m pip install --upgrade pip 
+        python -m pip install --upgrade pip setuptools
         pip install flake8==6.0.0 flake8-isort==6.0.0
+        pip install -r ./backend/requirements.txt 
 
     - name: Test with flake8
       run: python -m flake8 backend/
-
-    # Тесты
-  backend-tests:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
-
-    - name: Install system dependencies
+    - name: Test with flake8 and django tests
       run: |
-        sudo apt-get update
-        sudo apt-get install -y libjpeg-dev zlib1g-dev libfreetype6-dev \
-        liblcms2-dev libwebp-dev tcl8.6-dev tk8.6-dev python3-tk \
-        build-essential libpq-dev
-
-    - name: Create virtual environment
-      run: |
-        python -m venv venv
-        source venv/bin/activate
-
-    - name: Install pip cache
-      run: |
-        source venv/bin/activate
-        pip install --upgrade pip
-        pip cache purge
-
-    - name: Install dependencies
-      run: |
-        source venv/bin/activate
-        pip install -r backend/requirements.txt
-
-    - name: Navigate to backend directory
-      run: |
-        cd backend
-        pwd
-
-    - name: Run tests
-      run: |
-        source venv/bin/activate
+        python -m flake8 backend/
         pytest
