--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,13 +35,13 @@ jobs:
         POSTGRES_USER: django_user
         POSTGRES_PASSWORD: django_password
         POSTGRES_DB: django_db
-        SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
         DB_HOST: 127.0.0.1
         DB_PORT: 5432
       run: |
         python -m pip install --upgrade pip setuptools
         pip install flake8==6.0.0 flake8-isort==6.0.0
         pip install -r ./backend/requirements.txt
+        echo "SECRET_KEY=${{ secrets.DJANGO_SECRET_KEY }}"
 
     - name: Test with flake8
       run: python -m flake8 backend/
