--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,12 +36,12 @@ jobs:
         POSTGRES_PASSWORD: django_password
         POSTGRES_DB: django_db
         DB_HOST: 127.0.0.1
+        SECRET_KEY: django-insecure-cg6*%6d51ef8f#4!r3*$vmxm4)abgjw8mo!4y-q*uq1!4$-89$
         DB_PORT: 5432
       run: |
         python -m pip install --upgrade pip setuptools
         pip install flake8==6.0.0 flake8-isort==6.0.0
         pip install -r ./backend/requirements.txt
-        echo "SECRET_KEY=${{ secrets.DJANGO_SECRET_KEY }}"
 
     - name: Test with flake8
       run: python -m flake8 backend/
