--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
     - name: Test with flake8 and django tests
       run: |
         python -m flake8 backend/
-
+        pytest
 
   build_and_push_to_docker_hub:
     name: Push Docker image to DockerHub
@@ -187,5 +187,5 @@ jobs:
          Выполнил: ${{ github.actor }}
 
          Cообщение коммита: ${{ github.event.commits[0].message }}
-         
+
          Ссылка на коммит: https://github.com/${{ github.repository }}/commit/${{github.sha}}
