--- a/kittygram_workflow.yml
+++ b/kittygram_workflow.yml
@@ -170,6 +170,7 @@ jobs:
             sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
             sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic
             sudo docker compose -f docker-compose.production.yml exec backend cp -r /app/collected_static/. /backend_static/static/
+
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
@@ -182,6 +183,9 @@ jobs:
         token: ${{ secrets.TELEGRAM_TOKEN }}
         message: |
          Деплой успешно выполнен!
-         Деплой в ветку (github.ref_name) сделал: (github.actor).
-         Cообщение коммита: (github.event.commits[0].message).
+         Ветка: ${{ github.ref_name }} 
+         Выполнил: ${{ github.actor }}
+
+         Cообщение коммита: ${{ github.event.commits[0].message }}
+
          Ссылка на коммит: https://github.com/${{ github.repository }}/commit/${{github.sha}}
